# sparkenv-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pr-workflow.yaml
src/: app_config.py  downloader.py  installer.py  sparkenv.py
src/app_config/: models.py  store.py
src/config/: app_config.py  models.py  store.py
tests/app_config/: test_store.py
