[build-system]
requires = [
    "setuptools", 
    "pytest"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "sparkenv"
version = "0.0.1"
dependencies = [
    'click',
    'beautifulsoup4',
    'requests',
    'importlib-metadata; python_version<"3.11"',
]

[project.scripts]
sparkenv = "sparkenv:main"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]